# EEG-FM-Digest

./: .gitignore  .repomixignore  AGENTS.md  README.md  SPEC.md  TEMPLATE.md  TODO.md  overnight_build.fish  pyproject.toml  tags.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: suggest-paper.yml
.github/workflows/: daily-digest.yml  monthly.yml  (+3 more)
.greptile/: config.json
configs/: batch_all_months.json  batch_all_months_explicit.json  batch_backfill_2021_to_2026-01.json  batch_backfill_2024.json  batch_single_month.json  featured_papers.json  site_config.json
data/: digest.sqlite  last_successful_run.json
docs/: index.html
notebooks/: arxiv_sanity.ipynb  openrouter_smoke_test.ipynb  pipeline_one_paper_sanity.ipynb  setup_your_digest.ipynb
prompts/: summarize.md  triage.md
schemas/: digest.json  summary.json
scripts/: backtest_merged_query.py  export_all_csv.py  publish_site.sh  run_all.sh  run_batch_all.sh  run_batch_month.sh  run_month.sh  sync_to_awesome.py  triage_single.py
tests/: conftest.py  test_architecture_stability.py  test_arxiv.py  test_arxiv_window.py  test_batch_featured.py  test_csv_export.py  test_daily_failures.py  test_eval_triage.py  test_forkability.py  test_llm.py  test_orchestrator_policies.py  test_pdf_extract_text.py  test_pdf_slicing.py  test_pipeline_outputs.py  test_render_site.py  test_run_cli.py  test_run_log.py  test_schema_paths.py  test_search_e2e.py  test_site_js_cache_contract.py  test_site_nav_e2e.py  test_summarize_modes.py  test_sync_to_awesome.py  test_topic_config.py  test_triage_single_script.py
(+248 files in other folders)
